--- a/src/routes/(homepage)/DesignSection/DesignSection.scss
+++ b/src/routes/(homepage)/DesignSection/DesignSection.scss
@@ -15,81 +15,72 @@
 	block-size: 100%;
 	margin-block-start: 120px;
 	text-align: center;
+
+	@media screen and (width < 768px) {
+		margin-block-start: 3rem;
+	}
+
+	@media screen and (width < 1024px) {
+		inline-size: 100%;
+	}
 }
 
 // Screenshot and wallpaper styling
-.files- {
-	&screenshot,
-	&wallpaper {
-		block-size: auto;
-		user-select: none;
-		-webkit-user-drag: none;
-	}
-
-	&screenshot {
-		position: absolute;
-		inset-block-start: -48px;
-		inset-inline-end: 0;
-		inset-inline-start: 0;
-		z-index: 1;
-		inline-size: 70%;
-		max-inline-size: 1024px;
-		margin: 0 auto;
-		border: 1px solid var(--fds-surface-stroke-default);
-		border-radius: calc(var(--fds-overlay-corner-radius) / 1.25);
-		background-color: hsl(var(--mica-tint), var(--mica-tint-opacity));
-		box-shadow: var(--fds-dialog-shadow);
-		transition: 50ms linear transform;
-		backdrop-filter: blur(60px) saturate(150%);
-		@media screen and (width > 2048px) {
-			border-radius: var(--fds-overlay-corner-radius);
-		}
-	}
-
-	&wallpaper {
-		position: relative;
-		inline-size: 90%;
-		max-inline-size: 1440px;
-		border: 1px solid var(--fds-card-stroke-default);
-		border-radius: calc(var(--fds-overlay-corner-radius) * 1.5);
-	}
+picture > img {
+	block-size: auto;
+	user-select: none;
+	-webkit-user-drag: none;
 }
 
-// Design section small device support
-@media screen and (width < 1024px) {
-	// Enlarge wallpaper and screenshot
-	.design-image,
-	.files-wallpaper {
-		inline-size: 100%;
+.files-screenshot {
+	position: absolute;
+	inset-block-start: -48px;
+	inset-inline-end: 0;
+	inset-inline-start: 0;
+	z-index: 1;
+	inline-size: 70%;
+	max-inline-size: 1024px;
+	margin: 0 auto;
+	border: 1px solid var(--fds-surface-stroke-default);
+	border-radius: calc(var(--fds-overlay-corner-radius) / 1.25);
+	background-color: hsl(var(--mica-tint), var(--mica-tint-opacity));
+	box-shadow: var(--fds-dialog-shadow);
+	transition: 50ms linear transform;
+	backdrop-filter: blur(60px) saturate(150%);
+
+	@media screen and (width < 768px) {
+		inset-block-start: 32px;
+		inset-inline-start: -2.5%;
+		inline-size: 105%;
+		transform: none !important; // Prevent parallax scrolling
 	}
-	.files-screenshot {
+
+	@media screen and (width < 1024px) {
 		inset-block-start: 0;
 	}
+
+	@media screen and (width > 2048px) {
+		border-radius: var(--fds-overlay-corner-radius);
+	}
 }
 
-@media screen and (width < 768px) {
-	// Add some margins to account for more space available
-	.design-image {
-		margin-block-start: 48px;
+.files-wallpaper {
+	position: relative;
+	margin-inline: auto;
+	inline-size: 90%;
+	max-inline-size: 1440px;
+	border: 1px solid var(--fds-card-stroke-default);
+	border-radius: calc(var(--fds-overlay-corner-radius) * 1.5);
+
+	@media screen and (width < 768px) {
+		inline-size: 180%;
+		block-size: 80vw;
+		border-radius: 0;
+		object-fit: cover;
+		object-position: bottom;
 	}
 
-	// Screenshot and wallpaper
-	.files- {
-		// Position screenshot within wallpaper
-		&screenshot {
-			inset-block-start: 32px;
-			inset-inline-start: -2.5%;
-			inline-size: 105%;
-			transform: none !important; // Prevent parallax scrolling
-		}
-
-		// Fit wallpaper to viewport
-		&wallpaper {
-			inline-size: 180%;
-			block-size: 80vw;
-			border-radius: 0;
-			object-fit: cover;
-			object-position: bottom;
-		}
+	@media screen and (width < 1024px) {
+		inline-size: 100%;
 	}
 }
