--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -2,7 +2,7 @@
 
 .markdown-body {
 	color: var(--fds-text-primary);
-	font-size: 1.4rem;
+	font-size: 1rem;
 	line-height: 1.45;
 
 	// Spacing
@@ -34,18 +34,17 @@
 	figure {
 		margin: 16px 0;
 
-		&.margin- {
-			&top {
-				margin-block: 48px 16px;
-			}
-			&bottom {
-				margin-block: 16px 48px;
-			}
+		&.margin-top {
+			margin-block: 48px 16px;
+		}
+
+		&.margin-bottom {
+			margin-block: 16px 48px;
 		}
 
 		figcaption {
 			color: var(--fds-text-secondary);
-			font-size: 1.45rem;
+			font-size: 0.9rem;
 			text-align: center;
 		}
 	}
