--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -74,6 +74,7 @@
 		color: var(--fds-text-primary);
 		font-weight: 600;
 		line-height: 1.25;
+		padding-inline-end: 40px; // Space for anchor button
 	}
 
 	h1 {
