Fixed content area height to account top 1px border

--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -7,7 +7,8 @@
 
 	.markdown-body {
 		overflow-y: auto;
-		max-height: calc(100vh - 58px); /* 58px to account for nav bar height */
+		/* 58px to account for nav bar height and 1px to account for border */
+		max-height: calc(100vh - 59px);
 		font-size: 1.6rem;
 		line-height: 2.6rem;
 		max-inline-size: 1000px;
